tests/compiletests/ui/spirv-attr/invalid-matrix-type.stderr
error: `#[spirv(matrix)]` must have 2, 3 or 4 members
   --> $DIR/invalid-matrix-type.rs:
    |
    | pub struct _FewerFields {
    | ^^^^^^^^^^^^^^^^^^^^^^^

error: `#[spirv(matrix)]` type fields must all be vectors
   --> $DIR/invalid-matrix-type.rs:
    |
    | pub struct _NotVectorField {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: field type is f32

error: `#[spirv(matrix)]` member types must all be the same
   --> $DIR/invalid-matrix-type.rs:
    |
    | pub struct _DifferentType {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

